neha.yml
apiVersion: v1
kind: Service
metadata:
  name: neha
  namespace: family
spec:
  type: ClusterIP
  selector:
    name: neha
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neha
  namespace: family
spec:
  replicas: 1
  selector:
    matchLabels:
      name: neha
  template:
    metadata:
      labels:
        name: neha
    spec:
      containers:
      - name: bipin
        image: nginx
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: html
          configMap:
            name: neha
            items:
              - key: message
                path: index.html
