shaurya.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
    name: family-shaurya
    namespace: family
spec:
  rules:
  - host: family-shaurya.k8s1.bjethwan.xyz
    http:
      paths:
      - backend:
          serviceName: shaurya
          servicePort: 80
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: shaurya
  namespace: family
spec:
  type: ClusterIP
  selector:
    name: shaurya
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shaurya
  namespace: family
spec:
  replicas: 1
  selector:
    matchLabels:
      name: shaurya
  template:
    metadata:
      labels:
        name: shaurya
    spec:
      containers:
      - name: shaurya
        image: nginx
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: html
          configMap:
            name: shaurya
            items:
              - key: message
                path: index.html
